--- a/src/style/common.css
+++ b/src/style/common.css
@@ -8,14 +8,22 @@ body {
 	position: relative;
 	font-size: 0.8rem;
 	padding: 10px 0 10px 20px;
+	white-space : nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .breadcrumb > * {
 	position: relative;
 }
 .breadcrumb .fa-icon {
 	width: 10px;
-	margin: 0 15px -3px 15px;
+	margin: 0 12px;
 	opacity: 0.5;
+}
+.breadcrumb .fa-icon.home {
+	width: 14px;
+	margin-left: 2px;
+	opacity: 0.8;
 }
 
 .container {
@@ -58,11 +66,14 @@ ul, ol{
 }
 pre{
 	white-space: pre-wrap;
-	color: var(--vscode-textPreformat-foreground);
 	background-color: var(--vscode-list-hoverBackground);
 	margin: 0;
 	padding: 10px 15px;
 	border-radius: 3px;
+}
+pre code::selection{
+	color: #000;
+	background-color: #fee102;
 }
 button{
 	border-radius: 3px;
@@ -79,11 +90,15 @@ table {
 	width: 100%;
 	border-collapse: collapse;
 }
+table th {
+	padding: 10px 0 20px 0;
+	font-size: 1.1rem;
+}
 table tr:nth-child(even) td {
 	background-color: var(--vscode-list-hoverBackground);
 }
 table td {
-	padding: 10px 20px
+	padding: 10px 20px;
 }
 
 
@@ -109,10 +124,12 @@ table td {
 
 /* ----- highlight ----- */
 .highlight{
+	display: inline-block; 
 		display: inline-block; 
-		position: relative;
-		/* background: linear-gradient(to top, #ffdd00 50%, transparent 50%); */
-		border-bottom: solid 3px #ffdd00;
-		padding: 0;
-	}
+	display: inline-block; 
+	position: relative;
+	/* background: linear-gradient(to top, #ffdd00 50%, transparent 50%); */
+	border-bottom: solid 3px #ffdd00;
+	padding: 0;
+}
 
