--- a/src/style/page.css
+++ b/src/style/page.css
@@ -10,15 +10,34 @@
 }
 
 
+/* ---------- groups list ---------- */
+.groups-header .form-wrap {
+	margin-top: 10px;
+}
+.groups-header input[type=text] {
+	width: calc(100% - 30px);
+}
+.content.groups {
+	padding-top: 0;
+}
+.content.groups .btn-more {
+	width: 100%;
+	margin: 30px 0;
+	background-color: var(--vscode-button-secondaryBackground);
+}
+.content.groups .btn-more:hover {
+	background-color: var(--vscode-button-secondaryHoverBackground);
+}
+
 /* ---------- events list ---------- */
 .content.events {
 	padding-top: 20px;
 }
-.time-group button{
-	width: 52px;
+.time-group button {
+	min-width: 46px !important;
 	background-color: var(--vscode-button-secondaryBackground);
 }
-.time-group button:hover{
+.time-group button:hover {
 	background-color: var(--vscode-button-secondaryHoverBackground);
 }
 .time-group button.select{
@@ -32,24 +51,10 @@
 }
 .content.events .search-area .form-wrap {
 	position: relative;
-	width: calc(100% - 250px);
+	width: calc(100% - 300px);
 }
 .content.events .search-area .form-wrap input {
 	width: calc(100% - 30px);
-}
-.content.events .search-area .btn-empty {
-	position: absolute;
-	top: 0;
-	right: 0;
-	background-color: transparent;
-	padding: 5px 10px;
-	opacity: 0.3;
-}
-.content.events .search-area .btn-empty:hover {
-	opacity: 1;
-}
-.content.events .search-area .btn-empty .fa-icon {
-	width: 12px;
 }
 .content.events .search-area .check-wrap {
 	margin: 5px 0 0 10px;
@@ -60,8 +65,8 @@
 .content.events .search-area .result-count {
 	position: absolute;
 	right: 0;
-	padding: 5px 10px 0 0;
-	color: #505050;
+	padding: 10px 10px 0 0;
+	opacity: 0.7;
 }
 
 .content.events ul {
@@ -74,6 +79,27 @@
 .content.events ul li {
 	margin-bottom: 15px;
 }
-.content.events li pre {
+.content.events ul li .date {
+	cursor: pointer;
+}
+.content.events ul li .date .fa-icon {
+	margin: 0 10px 0 0;
+	width: 20px;
+}
+.content.events ul li pre {
 	margin-top: 5px;
+}
+.content.events ul li code {
+	overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.content.events ul li code.extend {
+	overflow: initial;
+	text-overflow: initial;
+	display: block;
+	-webkit-line-clamp: none;
+  -webkit-box-orient: none;
 }
